<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="104dp"
        android:onClick="konular_view"
        android:text="@string/button_main_konular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_main_istatistikler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:text="@string/button_main_puan_hesaplama"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_main_geri_sayim"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:text="@string/button_main_cikmis_sorular"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:text="@string/button_main_calisma_programi"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button5" />


</android.support.constraint.ConstraintLayout>